src/test/deca/context/invalid/personalTests/testOverrideSig2.deca
class A{
    int a ;
    void m(){
        println("m in A");
    }
}

class B extends A{
    int b;
}

class C extends B{
    int c;
    void m(int a){
        println("m in C");
    }
}

{
    C c = new C();
}